# lead-intelligence-engine

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: config.py  main.py
app/providers/: base.py  factory.py  groq_provider.py  mock_provider.py
app/schemas/: lead.py
app/services/: lead_analysis_service.py
examples/: sample_request.json
scripts/: smoke_test.py
tests/: test_groq_provider.py  test_mock_provider.py
